Renamed all references of paid to true
